convert tag list to tags array

--- a/_posts/2015-12-14-episode-41-2015.md
+++ b/_posts/2015-12-14-episode-41-2015.md
@@ -5,8 +5,6 @@ date: 2015-12-14 08:15
 categories: episodes
 length: 33372522
 duration: '27:46'
-tag_list: "2015 \"year in review\" disney spain \"social justice\" \"kendrick lamar\"
-  \n"
 ratings:
 - giggle: 6
 - music: 5
@@ -17,6 +15,13 @@ link: http://d5e3yh7f757go.cloudfront.net/eps/brt-041-160.mp3
 summary: |
   We look back on the year 2015 and talk about the things we accomplished, the world around us changing, and razor clams.
 soundcloud: 237659250
+tags:
+- '2015'
+- year in review
+- disney
+- spain
+- social justice
+- kendrick lamar
 ---
 We look back on the year 2015 and talk about the things we accomplished, the world around us changing, and razor clams.
 <!-- more -->
